Actualizacion a java 16, uso de programacion funcional, eliminacion de autowire por el uso de constructores y uso a lombok