@@ -5,12 +5,11 @@
  */
 package com.proyecto.config;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.MatchingStrategies;
 import org.springdoc.core.models.GroupedOpenApi;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -29,19 +28,20 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
+import lombok.AllArgsConstructor;
 
 /**
  *
  * @author ck
  */
+@AllArgsConstructor
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(securedEnabled = true, prePostEnabled = true)
 class WebSecurityConfig {
 
-	@Autowired
 	private JwtPuntoDAutentificacion jwtAuthenticationEntryPoint;
-	@Autowired
+
 	private JwtRequestFilter jwtRequestFilter;
 
 	@Bean
@@ -72,13 +72,13 @@ class WebSecurityConfig {
 	@Bean
 	CorsConfigurationSource corsConfigurationSource() {
 		final CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList(new String[] { "*" }));
-		configuration.setAllowedMethods(
-				Arrays.asList(new String[] { "HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS" }));
+		configuration.setAllowedOrigins(List.of("*"));
+		configuration.setAllowedMethods(List.of("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
 		configuration.setAllowCredentials(true);
-		configuration.setAllowedHeaders(Arrays.asList(new String[] { "*" }));
-		configuration.setExposedHeaders(Arrays.asList(new String[] { "X-Auth-Token", "Authorization",
-				"Access-Control-Allow-Origin", "Access-Control-Allow-Credentials" }));
+		configuration.setAllowedHeaders(List.of("*"));
+		configuration.setExposedHeaders(List.of("X-Auth-Token", "Authorization", "Access-Control-Allow-Origin",
+				"Access-Control-Allow-Credentials"));
+
 		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
